--- a/feeds/index.html
+++ b/feeds/index.html
@@ -18,8 +18,8 @@
     <body onLoad="init()">
         <div id="listview_repos">
         </div>
-        <div style="margin-left: auto; margin-right: auto;" class="text-center">
-            <button id="btn_load" class="btn btn-dark" onClick="loadMore()">Load more</button>
+        <div style="margin-left: auto; margin-right: auto;" class="text-center bg-secondary">
+            <button id="btn_load" class="btn btn-success" onClick="loadMore()">Load more</button>
         </div>
 
         <!--Dia log thông báo-->
